// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assessment Converter oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "children": Array [
    Object {
      "oboToSlateReturnFor": Object {
        "type": "ObojoboDraft.Pages.Page",
      },
    },
    Object {
      "oboToSlateReturnFor": Object {
        "type": "otherType",
      },
    },
    Object {
      "oboToSlateReturnFor": "someScoreActions",
    },
    Object {
      "oboToSlateReturnFor": Object {
        "attempts": undefined,
      },
    },
  ],
  "content": Object {
    "rubric": Object {
      "attempts": undefined,
    },
    "scoreActions": "someScoreActions",
    "triggers": Array [],
  },
  "id": "mockKey",
}
`;

exports[`Assessment Converter oboToSlate converts an OboNode to a Slate node 2`] = `
Object {
  "children": Array [
    Object {
      "oboToSlateReturnFor": Object {
        "type": "ObojoboDraft.Pages.Page",
      },
    },
    Object {
      "oboToSlateReturnFor": Object {
        "type": "otherType",
      },
    },
    Object {
      "oboToSlateReturnFor": "someScoreActions",
    },
    Object {
      "oboToSlateReturnFor": Object {
        "failedResult": 0,
        "mods": Array [],
        "passedResult": 100,
        "passingAttemptScore": 100,
        "type": "highest",
        "unableToPassResult": null,
      },
    },
  ],
  "content": Object {
    "rubric": false,
    "scoreActions": "someScoreActions",
    "triggers": Array [
      Object {
        "actions": Array [
          Object {
            "type": "nav:lock",
          },
        ],
        "type": "onNavEnter",
      },
      Object {
        "actions": Array [
          Object {
            "type": "nav:unlock",
          },
        ],
        "type": "onEndAttempt",
      },
      Object {
        "actions": Array [
          Object {
            "type": "nav:unlock",
          },
        ],
        "type": "onNavExit",
      },
    ],
  },
  "id": "mockKey",
}
`;

exports[`Assessment Converter slateToObo converts a Slate node to an OboNode 1`] = `
Object {
  "children": Array [
    Object {
      "slateToOboReturnFor": "ObojoboDraft.Pages.Page",
    },
    Object {
      "slateToOboReturnFor": "ObojoboDraft.Chunks.QuestionBank",
    },
  ],
  "content": Object {
    "rubric": Object {
      "slateToOboReturnFor": "ObojoboDraft.Sections.Assessment.Rubric",
    },
    "scoreActions": Object {
      "slateToOboReturnFor": "ObojoboDraft.Sections.Assessment.ScoreActions",
    },
    "triggers": Array [],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`Assessment Converter slateToObo converts a Slate node to an OboNode 2`] = `
Object {
  "children": Array [
    Object {
      "slateToOboReturnFor": "ObojoboDraft.Pages.Page",
    },
    Object {
      "slateToOboReturnFor": "ObojoboDraft.Chunks.QuestionBank",
    },
  ],
  "content": Object {
    "rubric": Object {
      "slateToOboReturnFor": "ObojoboDraft.Sections.Assessment.Rubric",
    },
    "scoreActions": Object {
      "slateToOboReturnFor": "ObojoboDraft.Sections.Assessment.ScoreActions",
    },
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`Assessment Converter slateToObo converts a Slate node to an OboNode 3`] = `
Object {
  "children": Array [
    Object {
      "slateToOboReturnFor": "ObojoboDraft.Pages.Page",
    },
    Object {
      "slateToOboReturnFor": "ObojoboDraft.Chunks.QuestionBank",
    },
  ],
  "content": Object {
    "rubric": Object {
      "slateToOboReturnFor": "ObojoboDraft.Sections.Assessment.Rubric",
    },
    "scoreActions": Object {
      "slateToOboReturnFor": "ObojoboDraft.Sections.Assessment.ScoreActions",
    },
    "triggers": Array [
      Object {
        "type": "someTrigger",
      },
    ],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`Assessment Converter slateToObo converts a Slate node to an OboNode with no model 1`] = `
Object {
  "children": Array [
    Object {
      "slateToOboReturnFor": "ObojoboDraft.Pages.Page",
    },
    Object {
      "slateToOboReturnFor": "ObojoboDraft.Chunks.QuestionBank",
    },
  ],
  "content": Object {
    "rubric": Object {
      "slateToOboReturnFor": "ObojoboDraft.Sections.Assessment.Rubric",
    },
    "scoreActions": Object {
      "slateToOboReturnFor": "ObojoboDraft.Sections.Assessment.ScoreActions",
    },
    "triggers": Array [],
  },
  "id": "otherMockKeyNotInModels",
  "type": "mockType",
}
`;

exports[`Assessment Converter slateToObo converts a Slate node to an OboNode with no model 2`] = `
Object {
  "children": Array [
    Object {
      "slateToOboReturnFor": "ObojoboDraft.Pages.Page",
    },
    Object {
      "slateToOboReturnFor": "ObojoboDraft.Chunks.QuestionBank",
    },
  ],
  "content": Object {
    "rubric": Object {
      "slateToOboReturnFor": "ObojoboDraft.Sections.Assessment.Rubric",
    },
    "scoreActions": Object {
      "slateToOboReturnFor": "ObojoboDraft.Sections.Assessment.ScoreActions",
    },
  },
  "id": "otherMockKeyNotInModels",
  "type": "mockType",
}
`;

exports[`Assessment Converter slateToObo converts a Slate node to an OboNode with no model 3`] = `
Object {
  "children": Array [
    Object {
      "slateToOboReturnFor": "ObojoboDraft.Pages.Page",
    },
    Object {
      "slateToOboReturnFor": "ObojoboDraft.Chunks.QuestionBank",
    },
  ],
  "content": Object {
    "rubric": Object {
      "slateToOboReturnFor": "ObojoboDraft.Sections.Assessment.Rubric",
    },
    "scoreActions": Object {
      "slateToOboReturnFor": "ObojoboDraft.Sections.Assessment.ScoreActions",
    },
    "triggers": Array [
      Object {
        "type": "someTrigger",
      },
    ],
  },
  "id": "otherMockKeyNotInModels",
  "type": "mockType",
}
`;
